--- a/src/NBT.WebUI.Client/Layout/NavMenu.razor
+++ b/src/NBT.WebUI.Client/Layout/NavMenu.razor
@@ -62,6 +62,21 @@
                         <span class="bi bi-building" aria-hidden="true"></span> Venue Management
                     </NavLink>
                 </div>
+            </Authorized>
+        </AuthorizeView>
+        
+        <AuthorizeView Roles="Admin,SuperUser">
+            <Authorized>
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="admin/staff">
+                        <span class="bi bi-person-badge" aria-hidden="true"></span> Staff Management
+                    </NavLink>
+                </div>
+            </Authorized>
+        </AuthorizeView>
+        
+        <AuthorizeView Roles="Admin,Staff">
+            <Authorized>
                 <hr />
                 <div class="nav-item px-3">
                     <NavLink class="nav-link" href="reports/dashboard">
