--- a/src/NBT.WebUI/Components/_Imports.razor
+++ b/src/NBT.WebUI/Components/_Imports.razor
@@ -5,11 +5,8 @@
 @using Microsoft.AspNetCore.Components.Web
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
-@using Microsoft.AspNetCore.Components.Authorization
-@using Microsoft.AspNetCore.Authorization
 @using Microsoft.JSInterop
-@using Microsoft.FluentUI.AspNetCore.Components
 @using NBT.WebUI
 @using NBT.WebUI.Components
-@using NBT.WebUI.Components.Layout
-@using NBT.WebUI.Models
+@using Microsoft.FluentUI.AspNetCore.Components
+@using Microsoft.FluentUI.AspNetCore.Components.Icons
